# chronomancer

./: .editorconfig  .gitattributes  .gitignore  .pre-commit-config.yaml  Brewfile  docker-compose.yml  go.mod  go.sum  pyproject.toml
app/: settings.py
cmd/demo-client/: main.go
cmd/demo-worker/: main.go
cmd/proxy/: main.go
docs/: bootstrap.md
internal/demo/: workflow.go  workflow_test.go
