[tool.isort]
profile = "black"

[tool.poetry]
name = "chronomancer"
version = "0.1.0-dev"
description = ""
authors = ["Stuart Jansen <sjansen@buscaluz.org>"]
license = "Apache 2.0"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.6"
black = "^21.7b0"
isort = "^5.9.3"
psycopg2 = "^2.9.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
